# autosurgeon

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yaml
autosurgeon/: Cargo.toml
autosurgeon-derive/: Cargo.toml
autosurgeon-derive/src/: attrs.rs  hydrate.rs  lib.rs  reconcile.rs
autosurgeon-derive/src/hydrate/: named_field.rs  newtype_field.rs  unnamed_field.rs  variant_fields.rs
autosurgeon-derive/src/reconcile/: enum_impl.rs  field_wrapper.rs  struct_impl.rs
autosurgeon-derive/tests/: hydrate.rs  hydrate_with.rs  missing.rs  reconcile.rs  reconcile_with.rs  reconcile_with_hydrate_with_key.rs  rename.rs  text.rs  with.rs
autosurgeon/examples/: try_hydrate_path.rs
autosurgeon/src/: bytes.rs  counter.rs  doc.rs  hydrate.rs  lib.rs  map_with_parseable_keys.rs  parse_fromstr.rs  prop.rs  reconcile.rs  text.rs  uuid.rs
autosurgeon/src/hydrate/: impls.rs  map.rs
autosurgeon/src/parse_fromstr/: btree_map.rs  hash_map.rs
autosurgeon/src/reconcile/: impls.rs  map.rs  reconcile_key_matching_tests.rs  reconcile_to_am_hydrate.rs  seq.rs
scripts/ci/: build-test  clippy  run
