[workspace]
members = ["autosurgeon", "autosurgeon-derive"]
resolver = "2"

[workspace.package]
authors = ["Alex Good <alex@memoryandthought.me>"]
edition = "2021"
rust-version = "1.89"
repository = "https://github.com/automerge/autosurgeon"
license = "MIT"

[workspace.dependencies]
automerge = { git = "https://github.com/automerge/automerge.git", branch="batch-insertion" }
automerge-test = { git = "https://github.com/automerge/automerge.git", branch="batch-insertion" }
