[package]
name = "autosurgeon-derive"
description = "Procedural macros for implementing autosurgeon"
version = "0.7.0"
edition = "2021"
authors = ["Alex Good <alex@memoryandthought.me>"]
license = "MIT"
rust-version = "1.65.0"
repository = "https://github.com/alexjg/autosurgeon"

[lib]
proc_macro = true

[dependencies]
quote = "1.0.21"
syn = { version = "2", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
smol_str = { version = "^0.1.21" }
thiserror = "1.0.37"

[dev-dependencies]
autosurgeon = { path = "../autosurgeon" }
automerge = { version = "0.5.0" }
automerge-test = "0.4.0"
