[package]
name = "autosurgeon-derive"
version = "0.9.0"
authors = { workspace = true }
edition = { workspace = true }
edition = "2021" 
rust-version = { workspace = true }
description = "Procedural macros for implementing autosurgeon"
repository = { workspace = true }
license = { workspace = true }

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "2.0.15", features = ["extra-traits", "full"] }
thiserror = "1.0.37"

[dev-dependencies]
automerge = { workspace = true }
automerge-test = { workspace = true }
autosurgeon = { path = "../autosurgeon" }
