[package]
name = "autosurgeon"
description = "A library for working with data in automerge documents"
version = "0.4.0"
edition = "2021"
authors = ["Alex Good <alex@memoryandthought.me>"]
license = "MIT"
rust-version = "1.65.0"
repository = "https://github.com/alexjg/autosurgeon"
readme = "../README.md"

[dependencies]
automerge = { version = "0.4.0" }
thiserror = "1.0.37"
smol_str = { version = "^0.1.21" }
autosurgeon-derive = { path = "../autosurgeon-derive", version = "0.4.0" }
similar = "2.2.1"
uuid = { version = "1.2.2", optional = true }

[dev-dependencies]
automerge-test = "0.3.0"

[features]
uuid = ["dep:uuid"]
