[package]
name = "autosurgeon"
version = "0.8.1"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "A library for working with data in automerge documents"
readme = "../README.md"
repository = { workspace = true }
license = { workspace = true }

[dependencies]
automerge = { workspace = true }
autosurgeon-derive = { path = "../autosurgeon-derive", version = "0.7.1" }
similar = "2.2.1"
thiserror = "1.0.37"
uuid = { version = "1.2.2", optional = true }

[dev-dependencies]
automerge-test = { workspace = true }

[features]
uuid = ["dep:uuid"]
