[package]
name = "autosurgeon"
version = "0.9.0"
rust-version = { workspace = true }
description = "A library for working with data in automerge documents"
readme = "../README.md"
repository = { workspace = true }
license = { workspace = true }

[dependencies]
automerge = { workspace = true }
autosurgeon-derive = { path = "../autosurgeon-derive", version = "0.9.0" }
pastey = "0.1.1"
similar = { version = "2.2.1", features = ["unicode"] }
thiserror = "1.0.37"
uuid = { version = "1.2.2", optional = true }

[dev-dependencies]
automerge-test = { workspace = true }
uuid = { version = "1.2.2", features = ["v4"] }

[features]
uuid = ["dep:uuid"]
